--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
                         </div>
                       </div>
                 </div>
+
+              <div class="col-md-4 mb-3">
+                    <div class="card">
+                       <a href="halaman3.html">
+                        <img src="img/girls/foto2.jpg" class="card-img-top" alt=""> </a>
+                        <div class="card-body">
+                          <p class="card-text text-center">"Galery Girls Mipa 4"</p>
+                          <h6 class="card-text text-center">• Click the picture"</h6>
+                          <p class="card-text"></p>
+                        </div>
+                      </div>
+                </div>
+                
                 
                 <div class="col-md-4 mb-3">
                     <div class="card">
