--- a/halaman3.html
+++ b/halaman3.html
@@ -169,6 +169,17 @@
   <a class="gambar-link" href="img/girls/foto37.jpg">
     <img src="img/girls/foto37.jpg" alt="Gambar 1">
   </a>
-    
+    <a class="gambar-link" href="img/anger/foto1.jpg">
+    <img src="img/anger/foto1.jpg" alt="Gambar 1">
+  </a>
+      <a class="gambar-link" href="img/anger/foto2.jpg">
+    <img src="img/anger/foto2.jpg" alt="Gambar 2">
+  </a>
+      <a class="gambar-link" href="img/anger/foto3.jpg">
+    <img src="img/anger/foto3.jpg" alt="Gambar 3">
+  </a>
+      <a class="gambar-link" href="img/anger/foto4.jpg">
+    <img src="img/anger/foto2.jpg" alt="Gambar 4">
+  </a>
 
     
