--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </div>
                       </div>
                 </div>
-                 <div class="col-md-4 mb-3">
+               <!--  <div class="col-md-4 mb-3">
                     <div class="card">
                        <a href="halaman5.html">
                         <img src="img/anger/foto1.jpg" class="card-img-top" alt=""> </a>
@@ -188,7 +188,7 @@
                           <p class="card-text"></p>
                         </div>
                       </div>
-                </div>
+                </div> -->
                 <div class="col-md-4 mb-3">
                     <div class="card">
                        <a href="halaman6.html">
