--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/ipp.jpg" alt="Ilman Hidayat" width="250" class="rounded-circle img-thumbnail"/>
-  <h1 class="display-4">𝖂𝖊 𝕬𝖗𝖊 𝕮𝖞𝖓𝖔𝖘𝖚𝖗𝖊</h1>
-  <p class="lead">𝕹𝖊𝖜, 𝕹𝖔𝖜, 𝕹𝖊𝖝𝖙</p>
+  <h1 class="display-4">@cynosuregrade</h1>
+  <p class="lead">𝖂𝖎𝖘𝖉𝖔𝖒, 𝕷𝖔𝖛𝖊 𝖆𝖓𝖉 𝕮𝖔𝖚𝖗𝖆𝖌𝖊</p>
 <!--  <p class="lead">Student | Programming</p> -->
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,192C384,171,480,117,576,133.3C672,149,768,235,864,234.7C960,235,1056,149,1152,128C1248,107,1344,149,1392,170.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
@@ -101,12 +101,15 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
            <div class="centered">
-             <h6>Wali Kelas: Andi Ati</h6>
-             <hr>
-  <h6>Ketua Kelas: Nurhadi</h6>
-  <h6>Wakil Ketua Kelas: Alif Pallawagau </h6>
-  <h6>Sekretaris: Isna Nur Islamiyah IsrisIsris
-<h6>Bendahara: Saskia Amelia</h6>
+             <h6>𝕊𝕥𝕣𝕦𝕜𝕥𝕦𝕣 𝕂𝕖𝕡𝕖𝕟𝕘𝕦𝕣𝕦𝕤𝕒𝕟</h6>
+<hr>
+<h6>𝕎𝕒𝕝𝕚 𝕜𝕖𝕝𝕒𝕤: 𝔸𝕟𝕕𝕚 𝔸𝕥𝕚, 𝕊.ℙ𝕕., 𝕄.ℙ𝕕.</h6>
+<h6>𝕂𝕖𝕥𝕦𝕒 𝕜𝕖𝕝𝕒𝕤: ℕ𝕦𝕣𝕙𝕒𝕕𝕚</h6>
+<h6>𝕎𝕒𝕜𝕚𝕝 𝕜𝕖𝕥𝕦𝕒: 𝔸𝕝𝕚𝕗 ℙ𝕒𝕝𝕝𝕒𝕨𝕒𝕘𝕒𝕦</h6>
+<h6>𝕊𝕖𝕜𝕣𝕖𝕥𝕒𝕣𝕚𝕤: 𝕀𝕤𝕟𝕒 ℕ𝕦𝕣 𝕀𝕤𝕝𝕒𝕞𝕚𝕪𝕒𝕙</h6> 
+<h6>𝔹𝕖𝕟𝕕𝕒𝕙𝕒𝕣𝕒: 𝕊𝕒𝕤𝕜𝕚𝕒 𝔸𝕞𝕖𝕝𝕚𝕒</h6>
+
+<h6>𝕊𝕚𝕤𝕨𝕒/𝕚 𝕄𝕚𝕡𝕒 𝟜</h6>
 </div>
           </div>
           
