--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/ipp.jpg" alt="Ilman Hidayat" width="250" class="rounded-circle img-thumbnail"/>
+      <img src="img/ol.jpg" alt="Ilman Hidayat" width="250" class="rounded-circle img-thumbnail"/>
   <h1 class="display-4">@cynosuregrade</h1>
   <p class="lead">𝖂𝖎𝖘𝖉𝖔𝖒, 𝕷𝖔𝖛𝖊 𝖆𝖓𝖉 𝕮𝖔𝖚𝖗𝖆𝖌𝖊</p>
 <!--  <p class="lead">Student | Programming</p> -->
@@ -143,6 +143,13 @@
       <div class="box">
   <a href="https://instagram.com/cynosuregrade">◕｡⁠✿Instagram✿｡⁠◕</a>
 
+  </div>
+      <br>
+  <div class="box">
+    <a href="#">
+    <h2>✧Official Logo ✧</h2>
+    <img src="img/logo/foto2.jpg" alt="Gambar" class="hidden">
+  </a>
   </div>
     </center>
 <!--    <div class="boxx">
