--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/ol.jpg" alt="Ilman Hidayat" width="250" class="rounded-circle img-thumbnail"/>
+      <img src="img/iz.jpg" alt="Ilman Hidayat" width="250" class="rounded-circle img-thumbnail"/>
   <h1 class="display-4">@cynosuregrade</h1>
   <p class="lead">𝖂𝖎𝖘𝖉𝖔𝖒, 𝕷𝖔𝖛𝖊 𝖆𝖓𝖉 𝕮𝖔𝖚𝖗𝖆𝖌𝖊</p>
 <!--  <p class="lead">Student | Programming</p> -->
