--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
     border: none;
     cursor: pointer;
   }
+
+  .hidden {
+  display: none;
+  position: absolute;
+  top: 100%; /* Menyembunyikan gambar di bawah kotak saat belum ditekan */
+  left: 0;
+  width: 100%;
+}
 </style>
 
 <style>
