--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   .hidden {
   display: none;
   position: absolute;
-  top: 100%; /* Menyembunyikan gambar di bawah kotak saat belum ditekan */
+  top: 100%; /* Menyembunyikann gambar di bawah kotak saat belum ditekan */
   left: 0;
   width: 100%;
 }
