--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
   </div>
       <br>
   <div class="box">
-    <a href="#">
-    <h2>✧Official Logo ✧</h2>
+    <a href="https://cynosuregrade.github.io/img/logo/foto2.jpg">
+    <h5>✧Official Logo✧</h5>
     <img src="img/logo/foto2.jpg" alt="Gambar" class="hidden">
   </a>
   </div>
